@@ -20,43 +20,9 @@ See the demo:
 http://demo.shopizer.com:8080
 
 
-Get the code:
--------------------
-Clone the repository:
-     
-	 $ git clone git://github.com/shopizer-ecommerce/shopizer.git
 
-If this is your first time using Github, review http://help.github.com to learn the basics.
-
-You can also download the zip file containing the code from https://github.com/shopizer-ecommerce/shopizer 
-
-To build the application:
--------------------	
-From the command line with Maven installed:
-
-	$ cd shopizer
-	$ mvn clean install
-if Maven is not installed, use maven wrapper
-       
-	$ mvmw clean install
 	
 
-Run the application from Tomcat 
--------------------
-copy sm-shop/target/ROOT.war to tomcat or any other application server deployment dir
-
-Increase heap space to 1024 m
-
-### Heap space configuration in Tomcat:
-
-
-If you are using Tomcat, edit catalina.bat for windows users or catalina.sh for linux / Mac users
-
-	in Windows
-	set JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" 
-	
-	in Linux / Mac
-	export JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" 
 
 Run the application from Spring boot 
 -------------------
@@ -85,24 +51,12 @@ username : admin
 
 password : password
 
-The instructions above will let you run the application with default settings and configurations.
-Please read the instructions on how to connect to MySQL, configure an email server and configure other subsystems
+###Tools:-
+front end:-HTML,CSS,JS
+Back end:-JAVA
+Database:-MySql
 
 
-### Documentation:
--------------------
 
-Documentation available from the wiki <http://shopizer-ecommerce.github.io/shopizer/#>
-
-ChatOps <https://shopizer.slack.com>  - Join our Slack channel https://shopizer-slackin.herokuapp.com/
-
-More information is available on shopizer web site here <http://www.shopizer.com>
-
-### Participation:
--------------------
-
-If you have interest in giving feedback or for participating to Shopizer project in any way
-Feel to use the contact form <http://www.shopizer.com/contact.html> and share your email address
-so we can send an invite to our Slack channel
 
 
